--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,32 +1,31 @@
-# A C++ template
-# Copyright © 2019-2020 otreblan
+# Min trie
+# Copyright © 2021 otreblan
 #
-# hello is free software: you can redistribute it and/or modify
+# min-trie is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation, either version 3 of the License, or
 # (at your option) any later version.
 #
-# hello is distributed in the hope that it will be useful,
+# min-trie is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
 #
 # You should have received a copy of the GNU General Public License
-# along with hello.  If not, see <http://www.gnu.org/licenses/>.
+# along with min-trie.  If not, see <http://www.gnu.org/licenses/>.
 
 cmake_minimum_required(VERSION 3.13.0)
 
-project(hello
-	VERSION 4.0
-	DESCRIPTION "A C++ template"
-	HOMEPAGE_URL "https://github.com/otreblan/hello"
+project(min-trie
+	VERSION 0.0.0
+	DESCRIPTION "Min trie"
+	HOMEPAGE_URL "https://github.com/otreblan/ada-proyecto-min-trie"
 )
 
 # Without this, paths are not relative in the sources list
 cmake_policy(SET CMP0076 NEW)
 
 include(GNUInstallDirs)
-include(FindPkgConfig)
 include(CPack)
 
 # The program itself
@@ -38,38 +37,8 @@ set_target_properties(${PROJECT_NAME}
 		CXX_STANDARD 17
 )
 
-# Headers
-target_include_directories(${PROJECT_NAME}
-	PRIVATE
-		${PROJECT_SOURCE_DIR}/include
-)
-
 add_subdirectory(src) # Sources list
-add_subdirectory(doc) # Documentation
 add_subdirectory(pkg) # Packaging
-
-## Shared libraries
-#pkg_check_modules(shared
-#	REQUIRED IMPORTED_TARGET
-#		libfoo1
-#		libfoo2
-#)
-#
-## Header only libraries
-#pkg_check_modules(header_only
-#	REQUIRED IMPORTED_TARGET
-#		libfoo3
-#		libfoo4
-#)
-#
-## Linking
-#target_link_libraries(${PROJECT_NAME}
-#	PRIVATE
-#		PkgConfig::shared
-#
-#	INTERFACE
-#		PkgConfig::header_only
-#)
 
 # Default flags
 if(UNIX)
